pre final commit

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
                 <input type="submit" id="add-item" class="submit2" value="Add Item">
             </form>
         </div>
-        <div class="pending" id="pending">
+        <div class="pending" id="">
             <h3>To-Do's Pending-:</h3>
+            <ul id="pending"></ul>
         </div>
-        <div class="done" id="done">
+        <div class="done" id="">
             <h3>To-Do's Done-:</h3>
+            <ul id="done"></ul>
         </div>
     </div>
 
